<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:textStyle="bold"
        android:text="@string/tiempo_de_instalacion"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnEstadoDeRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/estado_de_red" />

    <TextView
        android:id="@+id/tvEstadoDeRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnVibracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vibracion" />

    <Button
        android:id="@+id/btnAccederAInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/acceder_a_internet" />

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="20dp" />

</LinearLayout>